<resources>
    <string name="app_name">CDH System</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="next_text">Next</string>
    <string name="finish_text">Finish</string>
    <string name="create_new_account">create new account.</string>
    <string name="welcome_text">welcome to chronic disease healthcare system</string>
    <string name="doctor_text">Doctor</string>
    <string name="patient_text">Patient</string>
    <string name="email_hint">Email</string>
    <string name="code_hint">Enter code</string>
    <string name="email_example_text">example: eeeee@mail.com</string>
    <string name="phonenumber_hint">Phonenumber</string>
    <string name="password_hint">Password</string>
    <string name="new_password_hint">New password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="name_hint">Name</string>
    <string name="name_text">Name</string>
    <string name="height_hint">Height(M)</string>
    <string name="weight_hint">Weight(KG)</string>
    <string name="start_text">Start</string>
    <string name="welcome_dialog_message">"Hello, "</string>
    <string name="welcome_dialog_text">before start using our app we need you to fill some useful information
                                       so press \"start button\" to fill these information.</string>
    <string name="already_have_account">already have account? login</string>
    <string name="specialty_hint">Specialty</string>
    <string name="years_of_experience_hint">Years of experience</string>
    <string name="workplace_text">Workplace</string>
    <string name="select_your_work_days">Select your work days:</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="sex_text">Sex:</string>
    <string name="you_are_text">You are:</string>
    <string name="birth_date">Date birth:</string>
    <string name="select_text">Select</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="new_user_text">New user?</string>
    <string name="content_description_email_icon">icon for email text input</string>
    <string name="content_description_phone_icon">icon for phone number input</string>
    <string name="content_description_password_icon">icon for password text input</string>
    <string name="content_description_name_icon">icon for name text input</string>
    <string name="register">Register</string>
    <string name="diabetes">Diabetes</string>
    <string name="hypertension">Hypertension</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="select_disease_text">select at least on disease</string>
    <string name="reset_password">Reset password</string>
    <string name="login_to_your_account">log in to your account.</string>
    <string name="enter_your_email_to_reset_password">Enter your email and you will receive a veirfication code to reset your password</string>
    <string name="code_verification_message_text">You have received an email provided with a verification code
                                               press next and enter the code.</string>
    <string name="reset_password_message_text">Your password was updated successfully,
                                               return to login page and enter your information</string>
    <string name="email_verfication_code_message_text">We will send a verification code to this address: </string>
    <string name="enter_email_verfication_code_text">Enter verification code</string>
    <string name="enter_otp_code_text">Enter OTP code</string>
    <string name="confirm_text">Confirm</string>
    <string name="verify_text">Verify</string>
    <string name="change_password_text">Change password.</string>
    <string name="update_password_text">Update password</string>
    <string name="return_to_login_text">Return to login.</string>
    <string name="please_fill_the_following_information">Please fill the following information.</string>
    <string name="diseases_names">Disease(s) name(s):</string>
    <string name="diseases_types">Disease(s) type(s):</string>
    <string name="diabetes_type">Diabetes type:</string>
    <string name="hypertension_type">Hypertension type:</string>
    <string name="cholesterol_type">Cholesterol type:</string>
    <string name="detection_date">Detection date:</string>
    <string name="diabetes_detection_date">Diabetes detection date</string>
    <string name="hypertension_detection_date">Hypertension detection date</string>
    <string name="cholesterol_detection_date">Cholesterol detection date</string>
    <string name="hh_mm">HH:MM</string>
    <string name="ldl_cholesterol_percent">LDL Cholesterol Percent:</string>
    <string name="yyyy_mm_dd">YYYY/MM/DD</string>
    <string name="cholesterol_and_fats_test">Cholesterol and Fats Test</string>
    <string name="clear">CLEAR</string>
    <string name="add">ADD</string>
    <string name="hdl_cholesterol_percent">HDL Cholesterol Percent:</string>
    <string name="enter_these_fields">Enter these Fields:</string>
    <string name="set_time_and_date_auto">Set Time and Date Auto</string>
    <string name="press_to_set_time_and_date">Press to set Time and Date:</string>
    <string name="todo">TODO</string>
    <string name="triglyceride_percent">Triglyceride Percent:</string>
    <string name="cholesterol_total_percent">Cholesterol Total Percent:</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="enter_a_valid_phonenumber">Enter a valid phone number</string>
    <string name="password_length_error">"Password length must be at least 8 chracters"</string>
    <string name="name_characters_error">Name must consist of characters and spaces only</string>
    <string name="passwords_not_match_error">Password does not match</string>
    <string name="new_chronic_diseases">New Chronic Diseases</string>
    <string name="set_name_and_type">Set Name and Type:</string>
    <string name="set_detection_date">Set Detection Date:</string>
    <string name="test">test</string>
    <string name="add_patient_relative">Add Patient Relative</string>
    <string name="enter_relative_name">Enter Relative Name:</string>
    <string name="enter_relative_phone">Enter Relative Phone:</string>
    <string name="enter_relative_relationship">Enter Relative Relationship:</string>
    <string name="enter_hypertension_percent">Enter Hypertension percent:</string>
    <string name="hypertension_test">Hypertension Test</string>
    <string name="f_b_s_test">F.B.S Test</string>
    <string name="enter_f_b_s_percent">Enter F.B.S percent:</string>
    <string name="glucose_test">Glucose Test</string>
    <string name="enter_glucose_percent">Enter Glucose percent:</string>
    <string name="kidneys_test">Kidneys Test</string>
    <string name="diabetes_cumulative_test">Diabetes Cumulative Test</string>
    <string name="enter_hb_alc_percent">Enter Hb Alc percent:</string>
    <string name="magnesium_percent">Magnesium Percent:</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="bilirubin_total_percent">Bilirubin Total Percent:</string>
    <string name="ldh_percent">LDH Percent:</string>
    <string name="t_protein_percent">T.Protein Percent:</string>
    <string name="cpk_percent">CPK Percent:</string>
    <string name="ck_mb_percent">CK-MB Percent:</string>
    <string name="psa_percent">PSA Percent:</string>
    <string name="phosphours_percent">Phosphours Percent:</string>
    <string name="sodium_percent">Sodium Percent:</string>
    <string name="bilirubin_direct_percent">Bilirubin Direct Percent:</string>
    <string name="tibc_percent">TIBC Percent:</string>
    <string name="_2hpps_percent">2HPPS Percent:</string>
    <string name="acp_prostatic_percent">Acp.Prostatic Percent:</string>
    <string name="amylase_percent">Amylase Percent:</string>
    <string name="r_b_s_percent">R.B.S Percent:</string>
    <string name="s_iron_percent">S.Iron Percent:</string>
    <string name="chloride_percent">Chloride Percent:</string>
    <string name="calcium_percent">Calcium Percent:</string>
    <string name="potassium_percent">Potassium Percent:</string>
    <string name="acp_total_percent">Acp.Total Percent:</string>
    <string name="uric_acid_percent">Uric Acid Percent:</string>
    <string name="g_g_t_percent">G.G.T Percent:</string>
    <string name="albumin_percent">Albumin Percent:</string>
    <string name="urea_percent">Urea Percent:</string>
    <string name="creatinine_percent">Creatinine Percent:</string>
    <string name="s_gpt_percent">S.GPT Percent:</string>
    <string name="alk_phosphatese_percent">Alk.phosphatese Percent:</string>
    <string name="f_b_s_percent">F.B.S Percent:</string>
    <string name="s_got_percent">S.GOT Percent:</string>
    <string name="comprehensive_test">Comprehensive Test</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="new_test_appointment">New Test Appointment</string>
    <string name="set_date_of_appointment">Set Date of Appointment:</string>
    <string name="select_patient">Select Patient:</string>
    <string name="set_test">Set Doctor Appointment or Test Appointment:</string>
    <string name="or_search_on_patient">Or Search on Patient :</string>
    <string name="search">Search</string>
    <string name="enter_patient_name_or_id">Enter Patient Name or ID:</string>
    <string name="clearT">Clear</string>
    <string name="clear_complication">Clear Complication</string>
    <string name="enter_complication_name_and_status">Enter Complication Name and Status:</string>
    <string name="add_complication">Add Complication</string>
    <string name="enter_describe_of_complication_status">Enter Describe of Complication Status:</string>
    <string name="enter_complication_name">Enter Complication Name:</string>
    <string name="set_update_date_auto">Set Update Date Auto</string>
    <string name="set_date_of_update">Set Date of Update:</string>
    <string name="clear_describe">Clear Describe</string>
    <string name="select_a_complication">Select a Complication:</string>
    <string name="update">Update</string>
    <string name="enter_description_status_of_complication">Enter Description Status of Complication:</string>
    <string name="update_complication">Update Complication</string>
    <string name="home">Home</string>
    <string name="medical_history">Medical history</string>
    <string name="patients">Patients</string>
    <string name="appointments">Appointments</string>
    <string name="chat">chat</string>
    <string name="pending">Pending</string>
    <string name="cancel">Cancel</string>
    <string name="patient_email">"Patient Email: "</string>
    <string name="patient_name">"Patient Name: "</string>
    <string name="identification_number_hint">ID</string>
    <string name="enter_a_valid_id">Enter a valid identification number (9 digits)</string>
    <string name="name_or_id_or_phone_number_hint">name or ID or phone number</string>
    <string name="email">"Email: "</string>
    <string name="weight">"Weight: "</string>
    <string name="height">"Height: "</string>
    <string name="bmi">"BMI: "</string>
    <string name="speciality">"Speciality: "</string>
    <string name="years_of_experience">"Years of Experience: "</string>
    <string name="workplace">"Workplace: "</string>
    <string name="workdays">"Workdays: "</string>
</resources>