<!-- bottom_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_iconColor="@color/colorPrimaryDark"/>

    <item
        android:icon="@drawable/ic_patients"
        android:id="@+id/paitents"
        android:title="@string/patients"
        app:cnb_iconColor="@color/colorPrimaryDark" />

    <item
        android:icon="@drawable/ic_appointments"
        android:id="@+id/appointments"
        android:title="@string/appointments"
        app:cnb_iconColor="@color/colorPrimaryDark" />
    <item
        android:id="@+id/chat"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat"
        app:cnb_iconColor="@color/colorPrimaryDark" />
</menu>
